meecast (0.4.1) unstable; urgency=low

  * Removed old code for Omweather(Fremantle) from postrm script
  * Added details info for today weather (day and night)
  * Fixed bug with wind speed units settings
  * Added Russian, Finish, Spain, Polish and Germany description to package
  * Updated Germany translation 
  * Added stations in yr.no database (United Kingdom, Austria, Switzerland)

 -- Vlad vasiliev <vlad@gas.by>  Thu, 20 Oct 2011 09:24:20 +0200

meecast (0.3.34) unstable; urgency=low

  * Improved in event widget
  * Added stations in yr.no database (Belarus, Finland, Sweden, Germany, Greece,
    Macedonia, France)
  * Fixed problem with Macedonia in yr.no database

 -- Vlad Vasiliev <vlad@gas.by>  Tue, 18 Oct 2011 09:24:20 +0200

meecast (0.3.33) unstable; urgency=low

  * removed qt-components-base-icons from dependences for fremantle version

 -- vlad vasiliev <vlad@gas.by>  Sun, 9 Oct 2011 09:24:20 +0200

meecast (0.3.32) unstable; urgency=low

  * Changed wind icon to show actual wind direction
  * Fixed problem for Fremantle with old version of QtComponents

 -- Vlad Vasiliev <vlad@gas.by>  Sat, 8 Oct 2011 09:24:20 +0200

meecast (0.3.31) unstable; urgency=low

  * Updated Finish and Russian translations 
  * Added new iconsets 
  * Changed search system for countries, regions, cities lists
  * Redesigned settings windows 
  * Added new config option - fullscreen mode (saved in config file)
  * Added License to About window
  * Updated yr.no database (fixed problem with NonLatin letters)

 -- Vlad Vasiliev <vlad@gas.by>  Thu, 6 Oct 2011 09:24:20 +0200

meecast (0.3.30) unstable; urgency=low

  * Added possibility to Active / Disable  Statusbar using settings
  * Updated Spanish translation
  * Added applet for Harmattan
  * Added possibilty to show weather forecast in web browser after
    tapping on picture of source weather forecast
  * Redesigned setting windows

 -- Vlad Vasiliev <vlad@gas.by>  Fri, 29 Sep 2011 19:24:20 +0200
