@@ -93,7 +93,7 @@ Page {
                          value: model_day.getdata(day, "wind_speed") + ' ' + Config.tr(Config.windspeedunit)});
             if ((model_day.getdata(day, "ppcp")) != "N/A")
                 condition.append({cond_name: Config.tr("Ppcp:"),
-                         value: model_day.getdata(day, "ppcp")});
+                         value: model_day.getdata(day, "ppcp")} + '%');
             if ((model_day.getdata(day, "wind_gust")) != "N/A")
                 condition.append({cond_name: Config.tr("Wind gust:"),
                          value: model_day.getdata(day, "wind_gust") + ' ' + Config.tr(Config.windspeedunit)});
@@ -125,7 +125,7 @@ Page {
                          value: model_night.getdata(day, "wind_speed") + ' ' + Config.tr(Config.windspeedunit)});
             if ((model_night.getdata(day, "ppcp")) != "N/A")
                 condition.append({cond_name: Config.tr("Ppcp:"),
-                         value: model_night.getdata(day, "ppcp")});
+                         value: model_night.getdata(day, "ppcp")} + '%');
             if ((model_night.getdata(day, "wind_gust")) != "N/A")
                 condition.append({cond_name: Config.tr("Wind gust:"),
                          value: model_night.getdata(day, "wind_gust") + ' ' + Config.tr(Config.windspeedunit)});
